--- a/layouts/partials/syndication.html
+++ b/layouts/partials/syndication.html
@@ -4,3 +4,5 @@
 {{ end }}
   {{ end }}
 <a class="u-bridgy-fed" href="https://fed.brid.gy/"></a>
+<a href="https://brid.gy/publish/bluesky"></a>
+<a href="https://brid.gy/publish/mastodon"></a>
