--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="text-center container h-card">
+<div class="text-center container">
   <div class="row">
     <img src="{{ .Site.Params.image}}" alt="{{ .Site.Title }}" class="d-none u-logo u-photo d-flex ">
     <div class="p-note e-content">
