--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -74,7 +74,7 @@
   <hr>
 
   <div class="d-none">
-    <a href="/" rel="author" class="u-author h-card">
+    <a href="/" rel="author" class="u-author">
       <img loading="lazy" src="{{ .Site.Params.image}}" alt="logo" class="img-fluid u-logo u-photo" width="60">
       <p class="p-author">by {{ .Site.Author.name }}</p>
     </a>
