--- a/layouts/partials/micropub/single/reply.html
+++ b/layouts/partials/micropub/single/reply.html
@@ -10,7 +10,7 @@
           </h2>
 
           <div class="col-3">
-            <a href="/" rel="author" class="u-author h-card">
+            <a href="/" rel="author" class="u-author">
               <img loading="lazy" src="{{ .Site.Params.image}}" alt="logo" class="img-fluid u-logo u-photo mx-auto d-block" width="60">
               <p class="p-author text-center">{{ .Site.Author.name }}</p>
             </a>
