--- a/layouts/partials/micropub/summary/bookmark.html
+++ b/layouts/partials/micropub/summary/bookmark.html
@@ -7,7 +7,7 @@
       </p>
 
       <div class="col-3">
-        <a href="/" rel="author" class="u-author h-card">
+        <a href="/" rel="author" class="u-author">
           <img loading="lazy" src="{{ .Site.Params.image}}" alt="logo" class="img-fluid u-logo u-photo mx-auto d-block" width="60">
           <p class="p-author text-center">{{ .Site.Author.name }}</p>
         </a>
