--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,6 +7,9 @@
         <a target="_blank" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-Share Alike
           4.0 International
           License</a>
+        <a href="https://xn--sr8hvo.ws/previous">←</a>
+An <a href="https://xn--sr8hvo.ws">IndieWeb Webring</a> 🕸💍
+<a href="https://xn--sr8hvo.ws/next">→</a>
       </small>
     </div>
 </nav>
